--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-table",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "Datatable for React based on https://material-ui.com/api/table/ with additional features",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
@@ -84,7 +84,7 @@
     "debounce": "1.2.0",
     "fast-deep-equal": "2.0.1",
     "filefy": "0.1.10",
-    "jspdf": "2.1.0",
+    "jspdf": "^2.3.1",
     "jspdf-autotable": "3.5.9",
     "prop-types": "15.6.2",
     "react-beautiful-dnd": "13.1.0",
